# $Id$

2007-06-18	Konstantin V. Arkhipov

	* core/Form/MappedForm.class.php: now checks Form's rules upon
	import().

2007-06-02	Konstantin V. Arkhipov

	* 0.4.12 released.

2007-05-01	Sergey S. Sergeev

	* meta/builders/BaseBuilder.class.php: return query if setters are
	empty.

2007-04-22	Konstantin V. Arkhipov

	* trunk/core/OSQL/SelectQuery.class.php: getFieldNames() now respects
	aliases.

2007-03-20	Konstantin V. Arkhipov

	* main/Containers/UnifiedContainer.class.php: fetched collection now
	excluded from serialization.

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/UnifiedContainer.class.php: unsaved objects are not
	tracked by importList() now.

2007-01-22	Konstantin V. Arkhipov

	* main/DAOs/VoodooDaoWorker.class.php: segments are now created with
	0660 permission, instead of 0600.

2007-01-11	Konstantin V. Arkhipov

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov

	* 0.4.11 released.

2006-12-29	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-11-06	Konstantin V. Arkhipov

	* meta/builders/BaseBuilder.class.php: backported fix for non-required
	Ranges generation.

2006-10-25	Konstantin V. Arkhipov

	* core/DB/MySQL.class.php: always force new link creation for
	non-persistent connections.

2006-10-21	Konstantin V. Arkhipov

	* 0.4.10 released.

2006-10-18	Konstantin V. Arkhipov

	* core/Form/PrimitiveImage.class.php: big images' handling
	fixed.

2006-10-05	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: public constructor's
	generation fixed.

2006-10-04	Konstantin V. Arkhipov

	* core/Base/Assert.class.php: simplified isInteger-checking, succeeds
	on integer's with leading zeros now; arrived from trunk.
