@@ -72,10 +72,6 @@
 		.ONPHP_MAIN_PATH.'SPL'			.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Containers'	.PATH_SEPARATOR
 		.ONPHP_MAIN_PATH.'Utils'		.PATH_SEPARATOR
-		
-		// uncomment this one, if your php compiled without spl extension:
-		//
-		// .ONPHP_CORE_PATH.'SPL'.DIRECTORY_SEPARATOR.'bundled'.PATH_SEPARATOR
 	);
 	
 	// file extensions
